--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+.idea/vcs.xml
+.idea/uiDesigner.xml
+.idea/uiDesigner.xml
+.idea/misc.xml
+.idea/libraries/Maven__com_formdev_flatlaf_2_0_2.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
