--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ replay_pid*
 .idea/libraries/Maven__com_formdev_flatlaf_2_0_2.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
+.idea/libraries/Maven__com_formdev_flatlaf_intellij_themes_2_0_2.xml
