--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
             <version>2.0.2</version>
         </dependency>
         <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf-intellij-themes</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
             <groupId>de.erichseifert.vectorgraphics2d</groupId>
             <artifactId>VectorGraphics2D</artifactId>
             <version>0.13</version>
