--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
             <artifactId>VectorGraphics2D</artifactId>
             <version>0.13</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.zeromq</groupId>
+            <artifactId>jeromq</artifactId>
+            <version>0.5.2</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
