--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <version>0.5.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.msgpack</groupId>
+            <artifactId>msgpack-core</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
