--- a/settings.config
+++ b/settings.config
@@ -1,3 +1,5 @@
-#Fri Apr 08 12:08:20 PDT 2022
+#Tue Apr 26 22:39:31 PDT 2022
 boatDataIpAddress=localhost
 boatDataPort=5556
+timestampIpAddress=localhost
+timestampPort=55563
