Boat Trip Data Interface

--- a/settings.config
+++ b/settings.config
@@ -1,5 +1,7 @@
-#Tue Apr 26 22:43:43 PDT 2022
+#Tue May 03 22:57:41 PDT 2022
 boatDataIpAddress=localhost
+recordingDataSerialized=null
 boatDataPort=5556
 timestampIpAddress=localhost
+currentRecordingId=null
 timestampPort=55563
