--- a/settings.config
+++ b/settings.config
@@ -1,7 +1,7 @@
-#Thu May 05 12:04:04 PDT 2022
+#Thu May 05 12:35:19 PDT 2022
 boatDataIpAddress=localhost
-recordingDataSerialized=null
+recordingDataSerialized=91eb2889-bd55-416b-9577-7bb6bf74964f;May 05, 2022;0""0be8b060f-d862-420c-9d10-37d1f958f544;May 05, 2022;-1""c6b293d1-4890-4a37-b72b-fe35da602f5b;May 05, 2022;-1""2ae12839-1f03-4184-959f-35f2d5566ace;May 05, 2022;-1""6e5f541b-ae8e-4cc5-8287-4e97585ea4e2;May 05, 2022;-1""
 boatDataPort=5556
 timestampIpAddress=localhost
-currentRecordingId=null
+currentRecordingId=6e5f541b-ae8e-4cc5-8287-4e97585ea4e2
 timestampPort=55563
